# gifgaf0.github.io

./: .gitignore  README.md  index.html  ring_audit_section.md
hybrid_kem/: README.md  SPEC.md  STATUS.md  __init__.py  demo.py  hybrid_kem.py  pyproject.toml
hybrid_kem/combiner/: __init__.py  kdf_combiner.py
hybrid_kem/docs/: CLAUDE_CODE_BRIEF_01_ENTROPY.md  CLAUDE_CODE_GUIDE.md
hybrid_kem/entropy/: ALPHA_DECAY_NOTES.md  CALIBRATION_NOTES.md  IMPLEMENTATION_NOTES.md  IRRATIONAL_NOTES.md  MICROPHONE_NOTES.md  QUARTZ_NOTES.md  RADIO_NOTES.md  __init__.py  alpha_decay_entropy_source.py  circle_entropy.py  crystal_calibrator.py  decoy_field.py  drbg.py  health_tests.py  irrational_conditioner.py  microphone_entropy_source.py  qrng_source.py  quartz_commitments.jsonl  quartz_entropy_source.py  radio_atmospheric_entropy_source.py
hybrid_kem/kem_slwe/: __init__.py  slwe_toy.py  slwe_wrapper.py
hybrid_kem/kem_standard/: __init__.py  mlkem_wrapper.py
hybrid_kem/protocols/: __init__.py  pre_shifted_layering.py
hybrid_kem/tests/: conftest.py  test_alpha_decay_entropy.py  test_chain_zd.py  test_circle_entropy.py  test_combiner.py  test_crystal_calibrator.py  test_drbg.py  test_health_tests.py  test_hybrid_kem.py  test_irrational_conditioner.py  test_microphone_entropy.py  test_pre_shifted_layering.py  test_qrng_source.py  test_quartz_entropy.py  test_radio_atmospheric_entropy.py  test_ring_audit.py  test_slwe_toy.py
paper/: SLWE_paper_draft_v1.md  X1_cos18_address.md
reports/: CHAIN_ZD_IMPLEMENTATION_NOTES.md  OP-2.25.2-V2_RESULT.md  RHO_DERIVATION_NOTES.md  (+7 more)
(+61 files in other folders)
